Map.ofEntries(entry(..) for more than 10 entries